test/errors/scan_hexint.py
0x

0x5_

0x5555_

0x12__34

0xabdefghijklm

0x4A

0x4Z

0x11a

0x11snafuzzle

0x11z
